--- a/webpage/package.json
+++ b/webpage/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "core-js": "^3.6.5",
+    "naive-ui": "^2.30.8",
+    "vfonts": "^0.0.3",
     "vue": "^3.0.0",
+    "vue-grid-layout": "^2.3.12",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -38,7 +42,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
