--- a/webpage/package.json
+++ b/webpage/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "naive-ui": "^2.30.8",
     "vfonts": "^0.0.3",
     "vue": "^3.0.0",
     "vue-grid-layout": "^2.3.12",
+    "vue-jsonp": "^2.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
