--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -20,6 +20,8 @@ spring:
   config:
     activate:
       on-profile: dev
+  mvc:
+    static-path-pattern: /static/**
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
