--- a/webpage/package.json
+++ b/webpage/package.json
@@ -15,7 +15,7 @@
     "naive-ui": "^2.30.8",
     "vfonts": "^0.0.3",
     "vue": "^3.0.0",
-    "vue-grid-layout": "^2.3.12",
+    "vue-grid-layout": "^3.0.0-beta1",
     "vue-jsonp": "^2.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
