--- a/webpage/package.json
+++ b/webpage/package.json
@@ -18,6 +18,7 @@
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-jsonp": "^2.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-smooth-dnd": "^0.0.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
