--- a/webpage/package.json
+++ b/webpage/package.json
@@ -9,10 +9,12 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "naive-ui": "^2.30.8",
+    "qweather-icons": "^1.3.1",
     "vfonts": "^0.0.3",
     "vue": "^3.0.0",
     "vue-grid-layout": "^3.0.0-beta1",
