--- a/webpage/package.json
+++ b/webpage/package.json
@@ -13,10 +13,12 @@
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "js-md5": "^0.7.3",
     "naive-ui": "^2.30.8",
     "qweather-icons": "^1.3.1",
     "vfonts": "^0.0.3",
     "vue": "^3.0.0",
+    "vue-clipboard3": "^2.0.0",
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-jsonp": "^2.0.0",
     "vue-router": "^4.0.0-0",
