--- a/webpage/package.json
+++ b/webpage/package.json
@@ -12,8 +12,13 @@
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.27.2",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "js-md5": "^0.7.3",
+    "markdown-it": "^13.0.2",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-latex2img": "^0.0.6",
     "naive-ui": "^2.30.8",
     "qweather-icons": "^1.3.1",
     "vfonts": "^0.0.3",
